Adding new files

--- a/The Battle of Neighborhoods/The Battle of Neighborhoods.ipynb
+++ b/The Battle of Neighborhoods/The Battle of Neighborhoods.ipynb
@@ -920,7 +920,7 @@
    "outputs": [],
    "source": [
     "#Iterating through each row\n",
-    "for i in range(50, df.shape[0]):\n",
+    "for i in range(0, df.shape[0]):\n",
     "    j = 0\n",
     "    region_list = df['Neighborhood'][i].split(',')\n",
     "    while(j < len(region_list)):\n",
@@ -4292,7 +4292,9 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
